+ Tests  + new Exceptions
