# demo/src/main/java/com/example/demo/dto/MessageDTO.java
@@ -1,10 +1,9 @@
 package com.example.demo.dto;
 
 import lombok.AllArgsConstructor;
-import lombok.ToString;
 
 @AllArgsConstructor
-public class PostDTO {
-    public String header;
+public class MessageDTO {
     public String content;
+    public String to;
 }
